src/snapshots/smithereens__parser__tests__monomer-5.snap
---
source: src/parser.rs
assertion_line: 238
expression: "monomer(\"gm(+An,-Ac)-AEJ\")?"
---
(
    "",
    (
        [
            (
                'g',
                None,
            ),
            (
                'm',
                Some(
                    [
                        Add(
                            "An",
                        ),
                        Remove(
                            "Ac",
                        ),
                    ],
                ),
            ),
        ],
        Some(
            [
                (
                    'A',
                    None,
                    None,
                ),
                (
                    'E',
                    None,
                    None,
                ),
                (
                    'J',
                    None,
                    None,
                ),
            ],
        ),
    ),
)
