src/snapshots/smithereens__parser__tests__monomer-6.snap
---
source: src/parser.rs
assertion_line: 262
expression: "monomer(\"gm-AQK[AA]AA\")?"
---
(
    "",
    (
        [
            (
                'g',
                None,
            ),
            (
                'm',
                None,
            ),
        ],
        Some(
            [
                (
                    'A',
                    None,
                    None,
                ),
                (
                    'Q',
                    None,
                    None,
                ),
                (
                    'K',
                    None,
                    Some(
                        [
                            (
                                'A',
                                None,
                            ),
                            (
                                'A',
                                None,
                            ),
                        ],
                    ),
                ),
                (
                    'A',
                    None,
                    None,
                ),
                (
                    'A',
                    None,
                    None,
                ),
            ],
        ),
    ),
)
