src/snapshots/smithereens__parser__tests__monomer.snap
---
source: src/parser.rs
assertion_line: 188
expression: "monomer(\"gm\")?"
---
(
    "",
    (
        [
            (
                'g',
                None,
            ),
            (
                'm',
                None,
            ),
        ],
        None,
    ),
)
