src/snapshots/smithereens__parser__tests__multimer-2.snap
---
source: src/parser.rs
assertion_line: 196
expression: "multimer(\"gm~gm(-Ac)-AEJA\")?"
---
(
    "",
    (
        [
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                None,
            ),
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        Some(
                            [
                                Remove(
                                    "Ac",
                                ),
                            ],
                        ),
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                        (
                            'A',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
        ],
        [
            Glycosidic,
        ],
    ),
)
