src/snapshots/smithereens__parser__tests__multimer-3.snap
---
source: src/parser.rs
assertion_line: 221
expression: "multimer(\"gm-AEJA=gm-AEJ\")?"
---
(
    "",
    (
        [
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                        (
                            'A',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
        ],
        [
            Ambiguous,
        ],
    ),
)
