src/snapshots/smithereens__parser__tests__multimer-6.snap
---
source: src/parser.rs
assertion_line: 305
expression: "multimer(\"gm-AEJA=3<3=gm-AEJ\")?"
---
(
    "",
    (
        [
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                        (
                            'A',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
        ],
        [
            Explicit(
                [
                    (
                        3,
                        AcceptsFrom,
                        3,
                    ),
                ],
            ),
        ],
    ),
)
