src/snapshots/smithereens__parser__tests__multimer-7.snap
---
source: src/parser.rs
assertion_line: 338
expression: "multimer(\"gm-AEJ=3<3:3>3=gm-AQJ\")?"
---
(
    "",
    (
        [
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'Q',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
        ],
        [
            Explicit(
                [
                    (
                        3,
                        AcceptsFrom,
                        3,
                    ),
                    (
                        3,
                        DonatesTo,
                        3,
                    ),
                ],
            ),
        ],
    ),
)
