src/snapshots/smithereens__parser__tests__multimer-8.snap
---
source: src/parser.rs
assertion_line: 369
expression: "multimer(\"gm-AEJA=4>3=gm-AEJ=3>3=gm-AQJA\")?"
---
(
    "",
    (
        [
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                        (
                            'A',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'Q',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                        (
                            'A',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
        ],
        [
            Explicit(
                [
                    (
                        4,
                        DonatesTo,
                        3,
                    ),
                ],
            ),
            Explicit(
                [
                    (
                        3,
                        DonatesTo,
                        3,
                    ),
                ],
            ),
        ],
    ),
)
