src/snapshots/smithereens__parser__tests__multimer.snap
---
source: src/parser.rs
assertion_line: 174
expression: "multimer(\"gm~gm-AEJA\")?"
---
(
    "",
    (
        [
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                None,
            ),
            (
                [
                    (
                        'g',
                        None,
                    ),
                    (
                        'm',
                        None,
                    ),
                ],
                Some(
                    [
                        (
                            'A',
                            None,
                            None,
                        ),
                        (
                            'E',
                            None,
                            None,
                        ),
                        (
                            'J',
                            None,
                            None,
                        ),
                        (
                            'A',
                            None,
                            None,
                        ),
                    ],
                ),
            ),
        ],
        [
            Glycosidic,
        ],
    ),
)
